Fix CSS column overflow bug.

--- a/app/assets/stylesheets/authors.css.sass
+++ b/app/assets/stylesheets/authors.css.sass
@@ -18,6 +18,7 @@ body.authors
 
 body
   .author
+    max-width: 92%
     clear: both
     line-height: 1
     .avatar
@@ -33,4 +34,5 @@ body
     .shtick
       font-weight: bold
       font-size: 0.8em
+      max-width: 80%
 
